--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -43,7 +43,10 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:word-create' %}">Cadastro de palavra</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:login' %}">Jogar</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:criarpartida' %}">Jogar</a>
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:logout' %}">Sair</a>
             </li>
           </ul>
         </div>
