--- a/templates/core/jogo.html
+++ b/templates/core/jogo.html
@@ -56,6 +56,7 @@
     <section>
       <div class="container">
         <div class="row">
+          
         </div>
       </div>
     </section>
@@ -80,12 +81,38 @@
         {% endif %}
       {% endif %}
     {% endfor %}
-
+     <section>
+      <div class="container">
+        <div class="row">
+          {% for object in partida %}
+      {% if request.user.is_authenticated %}
+        {%if request.user.username == object.usuario.username%}
+          {{ object.letters}}
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+        </div>
+      </div>
+    </section>
     <form action="{% url 'forca:game' %}" method="post" >
       {% csrf_token %}
         <div class="form-group">
-          <input type="hidden" id="letters" name="letters" value="a" />
+          <input type="hidden" id="letters" name="a" value="a" />
           <button type="submit" class="btn btn-primary btn-xl"  >W</button>
+        </div>
+    </form>
+    <form action="{% url 'forca:game' %}" method="post" >
+      {% csrf_token %}
+        <div class="form-group">
+          <input type="hidden" id="letters" name="g" value="g" />
+          <button type="submit" class="btn btn-primary btn-xl">G</button>
+        </div>
+    </form>
+    <form action="{% url 'forca:game' %}" method="post" >
+      {% csrf_token %}
+        <div class="form-group">
+          <input type="hidden" id="letters" name="d" value="d" />
+          <button type="submit" class="btn btn-primary btn-xl">D</button>
         </div>
     </form>
 
