--- a/templates/core/jogo.html
+++ b/templates/core/jogo.html
@@ -21,10 +21,18 @@
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-
-
-
+    <script>
+      function funcao1()
+        {
+          var ask = window.confirm("Infelizmente você perdeu a partida");
+          if (ask) {
+            window.location.href = "window-location.html";
+          }
+          else {
+            window.location.href = "window-location.html";
+          }
+        }
+      </script>
   </head>
 
   <body id="page-top">
@@ -40,10 +48,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:word-create' %}">Cadastro de palavra</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:home' %}">Home</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:login' %}">Jogar</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{% url 'forca:logout' %}">Sair</a>
             </li>
           </ul>
         </div>
@@ -77,6 +85,8 @@
             <img src="{% static 'img/6.png' %}" class="user-image"  >
           {% elif object.erros == 6 %}
             <img src="{% static 'img/7.png' %}" class="user-image"  >
+          {% elif object.erros == 7 %}
+            <input onclick="funcao1()"/>
           {% endif %}
         {% endif %}
       {% endif %}
@@ -98,7 +108,7 @@
       {% csrf_token %}
         <div class="form-group">
           <input type="hidden" id="letters" name="a" value="a" />
-          <button type="submit" class="btn btn-primary btn-xl"  >W</button>
+          <button type="submit"  class="btn btn-primary btn-xl"  >A</button>
         </div>
     </form>
     <form action="{% url 'forca:game' %}" method="post" >
@@ -113,6 +123,13 @@
         <div class="form-group">
           <input type="hidden" id="letters" name="d" value="d" />
           <button type="submit" class="btn btn-primary btn-xl">D</button>
+        </div>
+    </form>
+    <form action="{% url 'forca:game' %}" method="post" >
+      {% csrf_token %}
+        <div class="form-group">
+          <input type="hidden" id="letters" name="s" value="s" />
+          <button type="submit" class="btn btn-primary btn-xl">S</button>
         </div>
     </form>
 
