--- a/templates/core/venceu.html
+++ b/templates/core/venceu.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sistema de Votação</title>
+    <title>Jogo da Forca</title>
 
     {% load static %}
 
@@ -32,7 +32,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Sistema de Votação</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Jogo da Forca</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -59,7 +59,7 @@
       {% csrf_token %}
         <div class="form-group">
           <input type="hidden" name="venceu" value="venceu" />
-          <button type="submit" class="btn btn-primary btn-xl" >Jogar Novamente</button>
+          <button type="submit" class="btn btn-primary btn-xl" >Finalizar partida</button>
         </div>
     </form>
   </div>
